--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <br>
 
 <span>Username: </span> <input name=user>
-<span>Password: </span> <input type=password name=username>
+<span>Password: </span> <input type=password name=password>
+<br>
+<button>Login</button>
 
 </head>
 </html>
