--- a/Contact Page.html
+++ b/Contact Page.html
@@ -21,7 +21,7 @@
 <br><br><br>
 
 
-</span>our support team has lighting fast response times!</span>
+</span>Our support team has lighting fast response times!</span>
 
 <br><br><br><br><br><br><br><br><br>
 
